--- a/html/portfolio/aboutme.html
+++ b/html/portfolio/aboutme.html
@@ -96,13 +96,13 @@
             <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
                 <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
             </a>
-            <a class="footer-github" href="https://github.com/gavinclark217">
+            <a class="footer-github" href="https://github.com/gavinclark217" target=”_blank”>
                 <img src="/githublogo.png" alt="Github" style="width: 35px;">
             </a>
-            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/" target=”_blank”>
                 <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
             </a>
-            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/" target=”_blank”>
                 <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
             </a>
         </section>
