--- a/html/portfolio/contact.html
+++ b/html/portfolio/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="/css/font.css">
     <title>Document</title>
 </head>
+
 <body>
     <nav>
         <h1>Gavin Clark</h1>
@@ -23,31 +25,57 @@
             <a href="resume.html">Resume</a>
         </ul>
     </nav>
-    <section class="container">
+    <section class="content">
         <h1 class="header">Contact Me</h1>
-        <section class="links">
-            <ul>
-                <li>My email: gavinclarkastro@gmail.com</li>
-                <li>My Instagram: <a href="https://www.instagram.com/gavinclarkastro?igsh=MmVlMjlkMTBhMg==">@gavinclarkastro</a></li>
-                <li>My Github: <a href="https://github.com/gavinclark217">gavinclark217</a></li>
-            </ul>
+        <section class="container">
+            <section class="links">
+                <ul>
+                    <li>My email: gavinclarkastro@gmail.com</li>
+                    <li>My Instagram: <a
+                            href="https://www.instagram.com/gavinclarkastro?igsh=MmVlMjlkMTBhMg==">@gavinclarkastro</a>
+                    </li>
+                    <li>My Github: <a href="https://github.com/gavinclark217">gavinclark217</a></li>
+                </ul>
+            </section>
+            <section class="ticket">
+                <h2>Create a Contact Ticket</h2>
+                <form class="input">
+                    <section class="toprow">
+                        <section class="name">
+                            <p>Name (required)</p>
+                            <input type="text">
+                        </section>
+                        <section class="email">
+                            <p>Email (required)</p>
+                            <input type="text">
+                        </section>
+                    </section>
+                    <section class="subject">
+                        <p>Subject (required)</p>
+                        <input type="text">
+                    </section>
+                    <section class="message">
+                        <p>Message (required)</p>
+                        <input type="text">
+                    </section>
+                    <input type="submit" value="Send">
+                </form>
+            </section>
         </section>
-        <section class="ticket">
-            <h2>Create a Contact Ticket</h2>
-        </section>
+
     </section>
     <footer>
         <section class="footer-links">
             <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
                 <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
             </a>
-            <a class="footer-github" href="https://github.com/gavinclark217">
+            <a class="footer-github" href="https://github.com/gavinclark217" target=”_blank”>
                 <img src="/githublogo.png" alt="Github" style="width: 35px;">
             </a>
-            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/" target=”_blank”>
                 <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
             </a>
-            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/" target=”_blank”>
                 <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
             </a>
         </section>
@@ -56,4 +84,5 @@
         </section>
     </footer>
 </body>
+
 </html>
