--- a/html/portfolio/personal/astro.html
+++ b/html/portfolio/personal/astro.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="/css/astro.css">
     <title>Document</title>
 </head>
+
 <body>
     <nav>
         <h1>Gavin Clark</h1>
@@ -23,18 +25,57 @@
             <a href="/html/portfolio/resume.html">Resume</a>
         </ul>
     </nav>
+    <section class="content">
+        <h1 class="header">Astrophotography</h1>
+        <section class="container">
+            <section class="toprow">
+                <section class="deepsky">
+                    <p>Deep Sky</p>
+                    <a href="deepsky.html">
+                        <img src="/astrophotos/ngc7000final.jpg" alt="" style="width: 600px;">
+                    </a>
+                </section>
+                <section class="solarsystem">
+                    <p>Solar System</p>
+                    <a href="solarsystem.html">
+                        <img src="/astrophotos/moon.jpg" alt="" style="width: 600px;">
+                    </a>
+                </section>
+            </section>
+            <section class="bottomrow">
+                <h2>My Gear</h2>
+                <section class="gear">
+                    <ul>
+                        <h3>Cameras</h3>
+                        <li>ZWO ASI585MC</li>
+                        <li>Canon 6D</li>
+                        <h3>Optics</h3>
+                        <li>Canon 135mm f/2</li>
+                        <li>Celestron Powerseeker 127EQ</li>
+                        <h3>Mount</h3>
+                        <li>Skywatcher Star Advwenturer 2i</li>
+                        <h3>Accessories</h3>
+                        <li>ZWO IR-cut filter (1.25in + 2in)</li>
+                        <li>Dew heater</li>
+                        <li>Laptop</li>
+                        <li>Bahtinov mask</li>
+                    </ul>
+                </section>
+            </section>
+        </section>
+    </section>
     <footer>
         <section class="footer-links">
             <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
                 <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
             </a>
-            <a class="footer-github" href="https://github.com/gavinclark217">
+            <a class="footer-github" href="https://github.com/gavinclark217" target=”_blank”>
                 <img src="/githublogo.png" alt="Github" style="width: 35px;">
             </a>
-            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/" target=”_blank”>
                 <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
             </a>
-            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/" target=”_blank”>
                 <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
             </a>
         </section>
@@ -43,4 +84,5 @@
         </section>
     </footer>
 </body>
+
 </html>
