--- a/html/portfolio/personal/deepsky.html
+++ b/html/portfolio/personal/deepsky.html
@@ -1,33 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="/gavinclark transparent copy1.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/css/font.css">
+    <link rel="stylesheet" href="/css/deepsky.css">
+    <title>Deep Sky Astrophotography</title>
 </head>
+
 <body>
     <nav>
         <h1>Gavin Clark</h1>
         <ul>
             <a href="/index.html">Home</a>
             <a href="/html/portfolio/aboutme.html">About Me</a>
-            <a class="active" href="/html/portfolio/portfolio.html">Portfolio</a>
+            <a class="active1" href="/html/portfolio/portfolio.html">Portfolio</a>
             <a href="/html/portfolio/contact.html">Contact Me</a>
             <a href="/html/portfolio/resume.html">Resume</a>
         </ul>
     </nav>
+    <section class="content">
+        <h1 class="header">Deep Sky Images</h1>
+        <section class="container">
+            <section class="carousel">
+                <div class="mySlides fade">
+                    <div class="numbertext">1 / 6</div>
+                    <img src="/astrophotos/m31-final-2.jpg" style="width:1000px">
+                    <div class="text">Andromeda Galaxy</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">2 / 6</div>
+                    <img src="/astrophotos/m8-final copy.jpg" style="width:1000px">
+                    <div class="text">Lagoon + Trifid Nebulae</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">3 / 6</div>
+                    <img src="/astrophotos/m101.jpg" style="width:1000px">
+                    <div class="text">Pinwheel Galaxy</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">4 / 6</div>
+                    <img src="/astrophotos/orion_final1.jpg" style="width:1000px">
+                    <div class="text">Orion + Horsehead Nebulae</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">5 / 6</div>
+                    <img src="/astrophotos/ngc7000final.jpg" style="width:1000px">
+                    <div class="text">North America Nebula</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">6 / 6</div>
+                    <img src="/astrophotos/m81.jpg" style="width:1000px">
+                    <div class="text">Bode's + Cigar Galaxies</div>
+                </div>
+            </section>
+        </section>
+    </section>
     <footer>
         <section class="footer-links">
             <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
                 <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
             </a>
-            <a class="footer-github" href="https://github.com/gavinclark217">
+            <a class="footer-github" href="https://github.com/gavinclark217" target=”_blank”>
                 <img src="/githublogo.png" alt="Github" style="width: 35px;">
             </a>
-            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/" target=”_blank”>
                 <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
             </a>
-            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/" target=”_blank”>
                 <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
             </a>
         </section>
@@ -35,5 +86,7 @@
             <p>Thank you for visiting my website!</p>
         </section>
     </footer>
+    <script src="/js/deepsky.js"></script>
 </body>
+
 </html>
