--- a/html/portfolio/personal/solarsystem.html
+++ b/html/portfolio/personal/solarsystem.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="/gavinclark transparent copy1.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/css/font.css">
+    <link rel="stylesheet" href="/css/solarsystem.css">
+    <title>Solar System Astrophotography</title>
 </head>
 <body>
     <nav>
@@ -16,18 +23,33 @@
             <a href="/html/portfolio/resume.html">Resume</a>
         </ul>
     </nav>
+    <section class="content">
+        <h1 class="header">Solar System Images</h1>
+        <section class="container">
+            <section class="toprow">
+                <section class="moon">
+                    <p>Moon</p>
+                    <img src="/astrophotos/moon.jpg" alt="Moon" style="width: 600px;">
+                </section>
+                <section class="jupiter">
+                    <p>Jupiter</p>
+                    <img src="/astrophotos/jupiter.png" alt="Jupiter" style="width: 600px;">
+                </section>
+            </section>
+        </section>
+    </section>
     <footer>
         <section class="footer-links">
             <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
                 <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
             </a>
-            <a class="footer-github" href="https://github.com/gavinclark217">
+            <a class="footer-github" href="https://github.com/gavinclark217" target=”_blank”>
                 <img src="/githublogo.png" alt="Github" style="width: 35px;">
             </a>
-            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/" target=”_blank”>
                 <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
             </a>
-            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/" target=”_blank”>
                 <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
             </a>
         </section>
