--- a/html/portfolio/portfolio.html
+++ b/html/portfolio/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/font.css">    <title>Document</title>
+    <link rel="stylesheet" href="/css/font.css">
+    <title>Document</title>
 </head>
+
 <body>
     <nav>
         <h1>Gavin Clark</h1>
@@ -25,13 +28,15 @@
     <section class="content">
         <h1 class="header">Portfolio</h1>
         <section class="container">
+            <p class="desc">A compilation of all the work I've done, both academically and personally. Click on a
+                picture to view the content.</p>
             <section class="toprow">
                 <section class="web">
                     <h3>Web Development Projects</h3>
                     <a href="web.html">
                         <img src="/codeportfolioimg.png" alt="" style="width: 600px;">
                     </a>
-                    
+
                 </section>
                 <section class="astro">
                     <h3>Astrophotography</h3>
@@ -52,7 +57,7 @@
                     <a href="personal/choral.html">
                         <img src="/choirportfolioimg.jpg" alt="" style="width: 600px;">
                     </a>
-                    
+
                 </section>
             </section>
         </section>
@@ -62,13 +67,13 @@
             <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
                 <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
             </a>
-            <a class="footer-github" href="https://github.com/gavinclark217">
+            <a class="footer-github" href="https://github.com/gavinclark217" target=”_blank”>
                 <img src="/githublogo.png" alt="Github" style="width: 35px;">
             </a>
-            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/" target=”_blank”>
                 <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
             </a>
-            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/" target=”_blank”>
                 <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
             </a>
         </section>
@@ -77,4 +82,5 @@
         </section>
     </footer>
 </body>
+
 </html>
