--- a/html/portfolio/web.html
+++ b/html/portfolio/web.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/font.css">    <title>Document</title>
+    <link rel="stylesheet" href="/css/font.css">
+    <title>Document</title>
 </head>
+
 <body>
     <nav>
         <h1>Gavin Clark</h1>
@@ -22,18 +25,62 @@
             <a href="resume.html">Resume</a>
         </ul>
     </nav>
+    <section class="content">
+        <h1 class="header">Web Development Projects</h1>
+        <section class="container">
+            <p>Visit my Github page <a href="https://github.com/gavinclark217">here</a>!</p>
+            <p class="desc">The projects on this page were done during my senior year at the Center for Advanced
+                Research and Technology (CART), 2023-2024. Each project utilizes HTML, CSS, and Javascript, was
+                developed using Visual Studio Code, and was created in collaboration with other students in the Web
+                Development lab. Click on an image to visit its Github repository, all code is public.</p>
+            <section class="projects">
+                <section class="toprow">
+                    <section class="chess">
+                        <p>Chess</p>
+                        <a href="https://github.com/gavinclark217/chess-web-finalproject" target=”_blank”>
+                            <img src="/chessportimg.png" alt="" style="width: 600px;">
+                        </a>
+                    </section>
+                    <section class="budget-calc">
+                        <p>EECU Budget Calculator</p>
+                        <a href="https://github.com/gavinclark217/budget-calc-new" target=”_blank”>
+                            <img src="/budgetcalcportimg.png" alt="" style="width: 600px;">
+                        </a>
+                    </section>
+
+                </section>
+                <section class="middlerow">
+                    <section class="jurassic">
+                        <p>Jurassic Park Theme Park</p>
+                        <a href="https://github.com/SkyeYang001/Showcase-2024-PM" target=”_blank”>
+                            <img src="/jurassicportimg.png" alt="" style="width: 600px;">
+                        </a>
+                    </section>
+                    <section class="memes">
+                        <p>Certified Memes</p>
+                        <a href="https://github.com/gavinclark217/certificates" target=”_blank”>
+                            <img src="/MEMESPORTIMG.png" alt="" style="width: 600px;">
+                        </a>
+                    </section>
+                </section>
+                <section class="bottomrow">
+
+                </section>
+            </section>
+        </section>
+    </section>
     <footer>
         <section class="footer-links">
             <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
                 <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
             </a>
-            <a class="footer-github" href="https://github.com/gavinclark217">
+            <a class="footer-github" href="https://github.com/gavinclark217" target=”_blank”>
                 <img src="/githublogo.png" alt="Github" style="width: 35px;">
             </a>
-            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/" target=”_blank”>
                 <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
             </a>
-            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/" target=”_blank”>
                 <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
             </a>
         </section>
@@ -42,4 +89,5 @@
         </section>
     </footer>
 </body>
+
 </html>
