--- a/html/portfolio/writing.html
+++ b/html/portfolio/writing.html
@@ -28,6 +28,7 @@
     <section class="content">
         <h1 class="header">Writing</h1>
         <h2>Honors English 12 Essays</h2>
+        <p>These essays were written by me during my senior year at the Center for Advanced Research and Technology (CART), 2023-2024.</p>
         <section class="jurassicpark">
             <h3>Chaos Theory in Michael Crichton’s <i>Jurassic Park</i></h3>
             <object class="pdf" data="/JP-APA-Research-Essay.pdf" width="1000" height="1000"></object>
@@ -42,13 +43,13 @@
             <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
                 <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
             </a>
-            <a class="footer-github" href="https://github.com/gavinclark217">
+            <a class="footer-github" href="https://github.com/gavinclark217" target=”_blank”>
                 <img src="/githublogo.png" alt="Github" style="width: 35px;">
             </a>
-            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/" target=”_blank”>
                 <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
             </a>
-            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/" target=”_blank”>
                 <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
             </a>
         </section>
